# gts

./: .gitignore  .travis.yml  CHANGES  CMakeLists.txt  CONTRIBUTING.md  OPENSOURCE_LICENSES  README.md
app/: CMakeLists.txt
app/lib/gtest-1.6.0/: CMakeLists.txt
app/lib/log4qt/: CMakeLists.txt
app/lib/qwt-6.1.0/: CMakeLists.txt  qwt.prf  qwtconfig.pri  qwtfunctions.pri
app/lib/qwt-6.1.0/designer/: designer.pro
app/lib/qwt-6.1.0/doc/: doc.pro
app/lib/qwt-6.1.0/examples/: examples.pri
app/lib/qwt-6.1.0/playground/: playground.pri
app/lib/qwt-6.1.0/src/: qwt_abstract_scale_draw.cpp  qwt_abstract_slider.cpp  qwt_color_map.cpp  qwt_color_map.h  qwt_counter.cpp  qwt_date.cpp  qwt_date_scale_draw.cpp  qwt_date_scale_draw.h  qwt_date_scale_engine.cpp  qwt_date_scale_engine.h  qwt_dial.cpp  qwt_global.h  qwt_graphic.cpp  qwt_graphic.h  qwt_knob.cpp  qwt_legend.cpp  qwt_math.h  qwt_painter.cpp  qwt_picker.cpp  qwt_picker_machine.cpp  qwt_pixel_matrix.cpp  qwt_pixel_matrix.h  qwt_plot.cpp  qwt_plot_abstract_barchart.cpp  qwt_plot_abstract_barchart.h  qwt_plot_barchart.cpp  qwt_plot_canvas.cpp  qwt_plot_canvas.h  qwt_plot_curve.cpp  qwt_plot_directpainter.cpp  qwt_plot_glcanvas.cpp  qwt_plot_glcanvas.h  qwt_plot_layout.cpp  qwt_plot_legenditem.cpp  qwt_plot_magnifier.cpp  qwt_plot_multi_barchart.cpp  qwt_plot_multi_barchart.h  qwt_plot_rasteritem.cpp  qwt_plot_renderer.cpp  qwt_plot_scaleitem.cpp  (+26 more)
app/lib/qwt-6.1.0/textengines/: textengines.pri
app/src/gui/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  ChessboardImage.cpp  ChessboardImage.h  HelpViewer.cpp  HelpViewer.h  HelpViewer.ui  ImagePrintPreviewDlg.cpp  ImagePrintPreviewDlg.h  ImagePrinter.cpp  ImagePrinter.h  ImageViewer.cpp  ImageViewer.h  ImageViewer.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Message.cpp  Message.h  MessageHandler.cpp  MessageHandler.h  QtMessageHandler.cpp  QtMessageHandler.h  UnknownLengthProgressDlg.cpp  UnknownLengthProgressDlg.h  WorkbenchTreeWidget.cpp  WorkbenchTreeWidget.h  WorkbenchUi.cpp  WorkbenchUi.h  WorkbenchUi.ui
app/src/hardware/: HardwareAbstraction.h
app/src/hardware/mingw/: HardwareAbstraction.cpp
app/src/hardware/unix/: HardwareAbstraction.cpp
app/src/hardware/win32/: HardwareAbstraction.cpp
app/src/main/: GTSApplication.cpp  GTSApplication.h  main.cpp
app/src/misc/: Callback.h  Container.h  Debugging.cpp  Debugging.h  FileNameUtils.cpp  FileNameUtils.h  FileUtilities.cpp  FileUtilities.h  Logging.cpp  Logging.h  OpenCvTools.cpp  OpenCvTools.h  Version.h  WinTime.cpp  WinTime.h  convert.h
app/src/res/: opensource_licenses.txt  resources.qrc
app/src/tools/algorithms/: AlgorithmInterface.cpp  AlgorithmInterface.h
app/src/tools/gui/: AnalyseResultsWidget.cpp  AnalyseResultsWidget.h  AnalyseResultsWidget.ui  AnalysisToolWidget.cpp  AnalysisToolWidget.h  ButtonLabelMapper.cpp  ButtonLabelMapper.h  CalibrateCameraResultsMapper.cpp  CalibrateCameraResultsMapper.h  CalibrateCameraToolWidget.cpp  CalibrateCameraToolWidget.h  CalibrateCameraToolWidget.ui  CalibratePositionResultsMapper.cpp  CalibratePositionToolWidget.cpp  CalibratePositionToolWidget.h  CalibratePositionToolWidget.ui  CalibrationImageGridMapper.cpp  CalibrationImageGridMapper.h  CalibrationImageTableMapper.cpp  CalibrationImageTableMapper.h  CalibrationImageViewMapper.cpp  CalibrationImageViewMapper.h  CalibrationToolboxMapper.cpp  CalibrationToolboxMapper.h  CameraCollectionToolWidget.cpp  CameraCollectionToolWidget.h  CameraRelationsTableMapper.h  CameraSelectionForm.cpp  CameraSelectionForm.h  CameraSelectionForm.ui  CameraSelectionFormContents.cpp  CameraSelectionFormContents.h  CameraSelectionFormContents.ui  CamerasPage.cpp  CamerasPage.h  CaptureLiveBtnController.cpp  CaptureLiveDualController.cpp  CaptureLiveDualController.h  CaptureRunToolWidget.cpp  (+74 more)
app/src/tracking/: Angles.cpp  Angles.h  CameraCalibration.cpp  CameraCalibration.h  CoverageSystem.cpp  CoverageSystem.h  CrossCorrelation.cpp  CrossCorrelation.h  GroundTruthUI.cpp  GroundTruthUI.h  GtsScene.cpp  GtsScene.h  GtsView.cpp  GtsView.h  KltTracker.cpp  KltTracker.h  MathsConstants.h  RobotMetrics.cpp  RobotMetrics.h  RobotTracker.cpp  RobotTracker.h  ScanMatch.cpp  ScanMatch.h  ScanUtility.cpp  ScanUtility.h  Sweeper.cpp  Sweeper.h  TrackHistory.cpp  TrackHistory.h  TrackThread.cpp  TrackThread.h
app/src/workbench/: CameraPositionsCollection.cpp  CameraPositionsCollection.h  CamerasCollection.cpp  CamerasCollection.h  Collection.cpp  Collection.h  ConfigListener.cpp  ConfigListener.h  KeyId.cpp  KeyId.h  KeyName.cpp  KeyName.h  KeyValue.cpp  KeyValue.h  NullConfigFileWriter.cpp  NullConfigFileWriter.h  OStreamConfigFileWriter.cpp  OStreamConfigFileWriter.h  ResultsCollection.cpp  ResultsCollection.h  RobotsCollection.cpp  RobotsCollection.h  RoomsCollection.cpp  RoomsCollection.h  RunsCollection.cpp  RunsCollection.h  TargetsCollection.cpp  TargetsCollection.h  WbConfig.cpp  WbConfig.h  WbConfigFileReader.cpp  WbConfigFileReader.h  WbConfigFileWriter.cpp  WbConfigFileWriter.h  WbConfigTools.cpp  WbConfigTools.h  WbDefaultKeys.cpp  WbDefaultKeys.h  WbKeyValues.cpp  WbKeyValues.h  (+20 more)
app/test/gui/: CollectionToolWidgetTests.cpp  KeyValueTests.cpp  MockIoDevice.h  MockMessageHandler.cpp  MockMessageHandler.h  MockQWidget.cpp  MockQWidget.h  TestCollectionToolWidget.cpp  TestCollectionToolWidget.h  TestHelpers.h  TestTool.h  ToolTabsContainerTests.cpp  ToolTests.cpp  WbConfigSchemaTests.cpp  WbConfigTests.cpp  WbKeyValuesTests.cpp  WbPathTests.cpp  WbSchemaTests.cpp  WorkbenchTests.cpp  XmlConfigFileReaderTests.cpp  XmlConfigFileWriterTests.cpp
app/test/main/: main.cpp
app/test/res/: testValidChildXmlConfigFile1.xml  testValidChildXmlConfigFile1Child.xml  testValidChildXmlConfigFile2.xml  testValidXmlConfigFile.xml  test_resources.qrc
help/: CMakeLists.txt
help/doc/: gts_userguide.doc  gts_userguide.htm  gts_userguide.qhcp  gts_userguide.qhp
help/doc/gts_userguide_files/: Thumbs.db  filelist.xml  header.htm  image009.wmz  props0002.xml
installer/: CMakeLists.txt  CPackConfig.cmake
installer/files/: DOWNLOADS
(+212 files in other folders)
